# minuta-scribe

./: .gitignore  LICENSE  README.md  README_TECH.md  buffer.raw  docker-compose.yml  pyproject.toml  start.sh  uninstall.sh  update.sh
backend/: env.example  pyproject.toml  requirements.txt
backend/app/: audio_buffer.py  main.py  ollama_client.py  whisper_worker.py  ws_client_test.py
backend/app/db/: database.py  seed.py
backend/app/models/: prompt.py
backend/app/routes/: prompts.py  summary.py
backend/app/services/: groq_service.py  llm_service.py  ollama_service.py  whisper_service.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docker/ollama/: Dockerfile
docs/screenshots/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/Meeting/: AudioRecorder.tsx  LanguageSelector.tsx  Meeting.css  Meeting.tsx  RecordingStats.tsx  SummaryActions.tsx  SummaryGenerator.tsx  TranscriptionView.tsx  Waveform.tsx
frontend/src/components/Prompts/: PromptForm.tsx  PromptList.tsx  Prompts.css  Prompts.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: TranscriptionLive.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
frontend/src/worklets/: pcm-processor.js
